--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
     "react": "^17.0.2",
+    "react-context-devtool": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-query": "^3.21.0",
     "react-router-dom": "^5.2.0",
