--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-context-devtool": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-query": "^3.21.0",
+    "react-responsive": "^9.0.0-beta.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toggle": "^4.1.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -45,6 +47,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.19",
-    "@types/react-router-dom": "^5.1.8"
+    "@types/react-router-dom": "^5.1.8",
+    "@types/react-toggle": "^4.0.3"
   }
 }
