--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
     "react": "^17.0.2",
-    "react-context-devtool": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-query": "^3.21.0",
     "react-responsive": "^9.0.0-beta.3",
@@ -48,6 +47,7 @@
   "devDependencies": {
     "@types/react": "^17.0.19",
     "@types/react-router-dom": "^5.1.8",
-    "@types/react-toggle": "^4.0.3"
+    "@types/react-toggle": "^4.0.3",
+    "react-context-devtool": "^2.0.3"
   }
 }
