--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://gabiprds93.github.io/amiibo-catalog",
   "name": "amiibo-catalog",
   "version": "0.1.0",
   "private": true,
@@ -23,6 +24,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -48,6 +51,7 @@
     "@types/react": "^17.0.19",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-toggle": "^4.0.3",
+    "gh-pages": "^3.2.3",
     "react-context-devtool": "^2.0.3"
   }
 }
